assets/css/style.css
body {
    font-family: "Quicksand", sans-serif;
}

h2 {
    text-transform: uppercase;
}

h3 {
    font-size: 30px;
    font-weight: 500;
}
/* --------------------------------------Colours Section */

.btn {
    color: #FAFAFA;
    background-color: #FF8970;
    border: none;
}

/* --------------------------------------Nav Section */

.navbar {
    padding: 10px 50px;
}

.nav-item-list {
    justify-content: flex-end;
}

.navbar-brand {
    font-size: 1.7rem;
    font-weight: 600;
}


/* --------------------------------------Jumbotron Section */


.jumbotron-container {
    height: 80vh;
    background: url('../images/jumbo-7.jpg') no-repeat top fixed;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    position: relative;
    padding-top: 150px;
}

.jumbotron {
    background-color: transparent;
}

.jumbotron .btn {
    margin-top: 20px;
}

/* --------------------------------------About Section */

.about-section {
    margin: 100px 100px;
}

.about-section h2 {
    margin: 0;
    padding-top: 0px;
    padding-bottom: 50px;
}

.about-section p {
    margin: 0;
    padding-top: 30px;
    padding-bottom: 50px;
}

.about-button {
    margin: 30px;
}


/* -------------------------------------------Media Queries */

@media (max-width: 480px) {
    .jumbotron-container {
        height: 75vh;
        background: url('../images/mobile1.jpg') no-repeat top fixed;
        padding-top: 70px;
    }
    }   

@media (max-width: 480px) {
    .jumbotron {  
        margin-right: 7%;
        margin-left: 7%;
    }
    } 

@media (max-width: 480px) {
    .jumbotron-container h1 {  
        font-size: 40px;
    }
    }  

@media (max-width: 480px) {
    .jumbotron-container p {  
        font-size: 20px;
    }
    } 

@media (max-width: 480px) {
    .jumbotron-container button {  
        margin-top: 40px;
    }
    } 

@media (max-width: 480px) {
.about-section {
    margin: 70px 20px;
}
}

@media (max-width: 480px) {
.about-section h2 {
    padding-top: 30px;
    padding-bottom: 20px;
    margin: 0;
}
}

@media (max-width: 480px) {
    .about-section p {
        margin: 0px;
        padding-top: 20px;
        padding-bottom: 20px; 
}
}

@media (max-width: 480px) {
    .about-section button {
        margin-top: 20px;
        margin-right: 0px;
        margin-bottom: 30px;
        margin-left: 0px;
}
}

